--- a/src/app/components/Navigation/Navigation.module.css
+++ b/src/app/components/Navigation/Navigation.module.css
@@ -1,11 +1,11 @@
 .header {
   width: 100%;
-  background: var(--background);
-  border-bottom: 1px solid var(--gray-alpha-200);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1000;
+  background-color: #f5f5f5;
+  opacity: 0.9;
 }
 
 .headerContent {
@@ -15,6 +15,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #f5f5f5;
 }
 
 .logo {
@@ -28,6 +29,7 @@
   font-size: 1.5rem;
   font-weight: 700;
   color: var(--text-primary);
+  letter-spacing: 0.09em;
 }
 
 .nav {
