--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,9 @@
   --foreground: #171717;
   
   /* Brand colors */
-  --primary-purple: #7B61FF;
+  --primary-purple: #2bd3f9;
   --primary-green: #9FE65C;
-  --primary-pink: #FF6B9B;
-  --primary-red: #FF4D4D;
+  --primary-red: #ff0044;
   
   /* UI colors */
   --gray-50: #F9FAFB;
@@ -18,7 +17,7 @@
   
   /* Component specific */
   --button-primary: var(--primary-purple);
-  --button-hover: #6B51FF;
+  --button-hover: #0ebdb4;
   --accent-green: var(--primary-green);
   --accent-pink: var(--primary-pink);
   
@@ -46,6 +45,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
 }
 
 body {
@@ -54,6 +54,9 @@ body {
   font-family: var(--font-sans);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 * {
