--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,7 +2,6 @@
   --gray-rgb: 0, 0, 0;
   --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
   --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-  background-color: #f5f5f5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -505,6 +504,7 @@ a.secondary {
   font-size: 1rem;
   color: var(--gray-900);
   margin-bottom: 2rem;
+  text-align: justify;
 }
 
 .aboutSection {
@@ -571,6 +571,7 @@ a.secondary {
   background: white;
   padding: 2rem;
   border-radius: 1rem;
+  background: var(--gray-alpha-100);
 }
 
 .cardTitle {
@@ -585,6 +586,7 @@ a.secondary {
   color: var(--gray-900);
   line-height: 1.6;
   opacity: 0.8;
+  text-align: justify;
 }
 
 .connectSection {
@@ -651,4 +653,8 @@ a.secondary {
 .backIcon {
   width: 1rem;
   height: 1rem;
+}
+
+.layout {
+  height: 100%;
 }
